--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular": "~1.3.14",
     "angular-ui-router": "~0.2.13",
     "angular-utils-pagination": "~0.6.0",
-    "angular-animate": "~1.3.14"
+    "angular-animate": "~1.3.14",
+    "angular-slick": "^0.2.1"
   }
 }
