--- a/bower.json
+++ b/bower.json
@@ -17,13 +17,15 @@
     "test",
     "tests"
   ],
-  "devDependencies": {},
+  "devDependencies": {
+    "ngSticky": "^1.8.13"
+  },
   "dependencies": {
     "pure": "~0.6.0",
     "angular": "~1.3.14",
     "angular-ui-router": "~0.2.13",
     "angular-utils-pagination": "~0.6.0",
     "angular-animate": "~1.3.14",
-    "angular-slick": "^0.2.1"
+    "angular-slick": "master"
   }
 }
