--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "description": "An example Angular blog app for use with the Wordpress REST API.",
   "main": "gulpfile.js",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-ng-annotate": "^0.3.6",
+    "lodash": "^4.15.0"
+  },
   "devDependencies": {
     "gulp": "~3.8.7",
     "gulp-angular-templatecache": "^1.3.0",
