--- a/src/app/.htaccess
+++ b/src/app/.htaccess
@@ -4,10 +4,10 @@
     # Force www (http://stackoverflow.com/a/4958847/772859)
     # OSX users: Forcing WWW locally with MAMP will cause an error - comment the following
     # 4 lines out. See https://github.com/michaelbromley/angular-wordpress-seed/issues/9.
-    RewriteCond %{HTTP_HOST} !^localhost$
-    RewriteCond %{HTTP_HOST} !^www\. [NC]
-    RewriteCond %{HTTPS}s ^on(s)|
-    RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+    # RewriteCond %{HTTP_HOST} !^localhost$
+    # RewriteCond %{HTTP_HOST} !^www\. [NC]
+    # RewriteCond %{HTTPS}s ^on(s)|
+    # RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
     # allow social media crawlers to work by redirecting them to a server-rendered static version on the page
     RewriteCond %{HTTP_USER_AGENT} (facebookexternalhit/[0-9]|Twitterbot|Pinterest|Google.*snippet|Googlebot|redditbot|bingbot)
