--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,10 @@
     "angular-ui-router": "~0.2.13",
     "angular-utils-pagination": "~0.6.0",
     "angular-animate": "~1.3.14",
-    "angular-slick": "master"
+    "angular-slick": "master",
+    "angular-masonry": "^0.16.0"
+  },
+  "resolutions": {
+    "angular": "~1.3.14"
   }
 }
