--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-utils-pagination": "~0.6.0",
     "angular-animate": "~1.3.14",
     "angular-slick": "master",
-    "angular-masonry": "^0.16.0"
+    "angular-masonry": "^0.16.0",
+    "ng-videosharing-embed": "^0.3.4"
   },
   "resolutions": {
     "angular": "~1.3.14"
