--- a/bower.json
+++ b/bower.json
@@ -28,9 +28,10 @@
     "angular-animate": "~1.3.14",
     "angular-slick": "master",
     "angular-masonry": "^0.16.0",
-    "ng-videosharing-embed": "^0.3.4"
+    "ng-videosharing-embed": "^0.3.4",
+    "angular-bootstrap-lightbox": "^0.12.0"
   },
   "resolutions": {
-    "angular": "~1.3.14"
+    "angular": "^1.4.10"
   }
 }
