--- a/bower.json
+++ b/bower.json
@@ -27,9 +27,7 @@
     "angular-utils-pagination": "~0.6.0",
     "angular-animate": "~1.3.14",
     "angular-slick": "master",
-    "angular-masonry": "^0.16.0",
-    "ng-videosharing-embed": "^0.3.4",
-    "angular-bootstrap-lightbox": "^0.12.0"
+    "angular-masonry": "^0.16.0"
   },
   "resolutions": {
     "angular": "^1.4.10"
