--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "lity": "^2.0.0"
   },
   "resolutions": {
-    "angular": "^1.4.10"
+    "angular": "^1.4.10",
+    "slick-carousel": "~1.6.0"
   }
 }
