--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "angular-animate": "~1.3.14",
     "angular-slick": "master",
     "angular-masonry": "^0.16.0",
-    "lity": "^2.0.0"
+    "lity": "^2.0.0",
+    "modernizr": "^3.3.1"
   },
   "resolutions": {
     "angular": "^1.4.10",
