--- a/bower.json
+++ b/bower.json
@@ -22,17 +22,13 @@
   },
   "dependencies": {
     "pure": "~0.6.0",
-    "angular": "~1.3.14",
+    "angular": "^1.4.10",
     "angular-ui-router": "~0.2.13",
     "angular-utils-pagination": "~0.6.0",
-    "angular-animate": "~1.3.14",
+    "angular-animate": "^1.4.10",
     "angular-slick": "master",
     "angular-masonry": "^0.16.0",
     "lity": "^2.0.0",
     "modernizr": "^3.3.1"
   },
-  "resolutions": {
-    "angular": "^1.4.10",
-    "slick-carousel": "~1.6.0"
-  }
 }
