--- a/bower.json
+++ b/bower.json
@@ -27,8 +27,14 @@
     "angular-utils-pagination": "~0.6.0",
     "angular-animate": "^1.4.10",
     "angular-slick": "master",
-    "angular-masonry": "^0.16.0",
     "lity": "^2.0.0",
     "modernizr": "^3.3.1"
+  },
+  "resolutions": {
+    "angular": "1.5.8",
+    "masonry": "^3.1.5",
+    "get-size": ">=1 <2",
+    "outlayer": "^1.2.0",
+    "fizzy-ui-utils": "~2.0.0"
   }
 }
