--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,7 @@
     "modernizr": "^3.3.1"
   },
   "resolutions": {
-    "angular": "1.5.8",
+    "angular": "^1.2.0",
     "masonry": "^3.1.5",
     "get-size": ">=1 <2",
     "outlayer": "^1.2.0",
