--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "angular-animate": "^1.4.10",
     "angular-slick": "master",
     "lity": "^2.0.0",
-    "modernizr": "^3.3.1"
+    "modernizr": "^3.3.1",
+    "ngprogress": "^1.1.3"
   },
   "resolutions": {
     "angular": "^1.2.0",
