--- a/bower.json
+++ b/bower.json
@@ -29,10 +29,11 @@
     "angular-slick": "master",
     "lity": "^2.0.0",
     "modernizr": "^3.3.1",
-    "ngprogress": "^1.1.3"
+    "ngprogress": "^1.1.3",
+    "angular-isotope": "^0.1.14"
   },
   "resolutions": {
-    "angular": "^1.2.0",
+    "angular": "^1.0.8",
     "masonry": "^3.1.5",
     "get-size": ">=1 <2",
     "outlayer": "^1.2.0",
