--- a/bower.json
+++ b/bower.json
@@ -22,10 +22,10 @@
   },
   "dependencies": {
     "pure": "~0.6.0",
-    "angular": "^1.4.10",
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
     "angular-ui-router": "~0.2.13",
     "angular-utils-pagination": "~0.6.0",
-    "angular-animate": "^1.4.10",
     "angular-slick": "master",
     "lity": "^2.0.0",
     "modernizr": "^3.3.1",
@@ -33,10 +33,6 @@
     "angular-isotope": "^0.1.14"
   },
   "resolutions": {
-    "angular": "^1.0.8",
-    "masonry": "^3.1.5",
-    "get-size": ">=1 <2",
-    "outlayer": "^1.2.0",
-    "fizzy-ui-utils": "~2.0.0"
+    "angular": "^1.0.8"
   }
 }
